# Airline-Passenger-Satisfaction

./: .gitignore  README.md  app.py  best_model.pkl  label_encoder.pkl  pyproject.toml
models/: best_model.pkl  config.pkl  label_encoder.pkl
pages/: 1_Findings.py  2_Model_Predict.py  3_Feature_Importance.py  4_Conclusion.py
tmp/: feature_importance.csv
