[tool.poetry]
name = "ml-airline-passenger-satisfaction"
version = "0.1.0"
description = "airline passenger satisfaction analysis, EDA insights, and modeling dashboard."
authors = ["Team 7"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = "*"
pandas = "*"
scipy = "*"
plotly = "*"
scikit-learn = "==1.7.2"
joblib = "*"
jupyterlab = "*"
ipykernel = "*"
streamlit = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
